--- a/mailtemplate/header.html
+++ b/mailtemplate/header.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Express 2 Help - Thanks for signing up</title>
+<title>Wipocos</title>
 <style>
 /**********************************************
 * Ink v1.0.5 - Copyright 2013 ZURB Inc        *
@@ -183,7 +183,7 @@ h6 a:visited {
   <tr>
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color:#52616E;">
       <tr>
-        <td align="center"  style=" padding:10px;"><img src="{EMAILHEADERIMAGE}" alt="E2H-logo" width="119" height="40" /></td>
+        <td align="center"  style=" padding:10px;"><img src="{EMAILHEADERIMAGE}" alt="{SITENAME}" width="119" height="40" /></td>
       </tr>
     </table></td>
   </tr>
